<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="contact">Contact</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="app_name">AutoResponse</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="message">Message</string>
    <string name="liste_de_messages_pr_con_us">Messages pré-conçus</string>
    <string name="enter_custom_message">Enter custom message</string>
    <string name="add">+</string>
    <string name="r_ponse_auto">Réponse auto</string>
    <string name="spam">Spam</string>
    <string name="goToSpam">Gestion Spam</string>
    <string name="GoSpam">Go to spam</string>
    <string name="activer_les_reponses_automatique">Activer les réponses automatique</string>
    <string name="envoye_le_spam">Envoyé le spam</string>
</resources>